@@ -98,6 +98,44 @@ var _ = time.Kitchen
 // proto package needs to be updated.
 const _ = proto.GoGoProtoPackageIsVersion2 // please upgrade the proto package
 
+// BytesEncodeFormat is the configurationf or bytes to string conversions.
+type BytesEncodeFormat int32
+
+const (
+	BytesEncodeFormat_HEX    BytesEncodeFormat = 0
+	BytesEncodeFormat_ESCAPE BytesEncodeFormat = 1
+	BytesEncodeFormat_BASE64 BytesEncodeFormat = 2
+)
+
+var BytesEncodeFormat_name = map[int32]string{
+	0: "HEX",
+	1: "ESCAPE",
+	2: "BASE64",
+}
+var BytesEncodeFormat_value = map[string]int32{
+	"HEX":    0,
+	"ESCAPE": 1,
+	"BASE64": 2,
+}
+
+func (x BytesEncodeFormat) Enum() *BytesEncodeFormat {
+	p := new(BytesEncodeFormat)
+	*p = x
+	return p
+}
+func (x BytesEncodeFormat) String() string {
+	return proto.EnumName(BytesEncodeFormat_name, int32(x))
+}
+func (x *BytesEncodeFormat) UnmarshalJSON(data []byte) error {
+	value, err := proto.UnmarshalJSONEnum(BytesEncodeFormat_value, data, "BytesEncodeFormat")
+	if err != nil {
+		return err
+	}
+	*x = BytesEncodeFormat(value)
+	return nil
+}
+func (BytesEncodeFormat) EnumDescriptor() ([]byte, []int) { return fileDescriptorApi, []int{0} }
+
 type SetupFlowRequest struct {
 	// TxnCoordMeta is the TxnCoordMeta for the transaction in which the flow
 	// will run. If nil, the flow will not run in a transaction higher-level
@@ -127,12 +165,13 @@ type EvalContext struct {
 	TxnTimestampNanos  int64 `protobuf:"varint,2,opt,name=txnTimestampNanos" json:"txnTimestampNanos"`
 	// The name of the location according to whose current timezone we're going to
 	// parse timestamps. Used to init EvalContext.Location.
-	Location        string        `protobuf:"bytes,4,opt,name=location" json:"location"`
-	Database        string        `protobuf:"bytes,5,opt,name=database" json:"database"`
-	SearchPath      []string      `protobuf:"bytes,6,rep,name=searchPath" json:"searchPath,omitempty"`
-	User            string        `protobuf:"bytes,7,opt,name=user" json:"user"`
-	SeqState        SequenceState `protobuf:"bytes,8,opt,name=seq_state,json=seqState" json:"seq_state"`
-	ApplicationName string        `protobuf:"bytes,9,opt,name=application_name,json=applicationName" json:"application_name"`
+	Location          string            `protobuf:"bytes,4,opt,name=location" json:"location"`
+	Database          string            `protobuf:"bytes,5,opt,name=database" json:"database"`
+	SearchPath        []string          `protobuf:"bytes,6,rep,name=searchPath" json:"searchPath,omitempty"`
+	User              string            `protobuf:"bytes,7,opt,name=user" json:"user"`
+	SeqState          SequenceState     `protobuf:"bytes,8,opt,name=seq_state,json=seqState" json:"seq_state"`
+	ApplicationName   string            `protobuf:"bytes,9,opt,name=application_name,json=applicationName" json:"application_name"`
+	BytesEncodeFormat BytesEncodeFormat `protobuf:"varint,10,opt,name=bytes_encode_format,json=bytesEncodeFormat,enum=cockroach.sql.distsqlrun.BytesEncodeFormat" json:"bytes_encode_format"`
 }
 
 func (m *EvalContext) Reset()                    { *m = EvalContext{} }
@@ -236,6 +275,7 @@ func init() {
 	proto.RegisterType((*ConsumerSignal)(nil), "cockroach.sql.distsqlrun.ConsumerSignal")
 	proto.RegisterType((*DrainRequest)(nil), "cockroach.sql.distsqlrun.DrainRequest")
 	proto.RegisterType((*ConsumerHandshake)(nil), "cockroach.sql.distsqlrun.ConsumerHandshake")
+	proto.RegisterEnum("cockroach.sql.distsqlrun.BytesEncodeFormat", BytesEncodeFormat_name, BytesEncodeFormat_value)
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -596,6 +636,9 @@ func (m *EvalContext) MarshalTo(dAtA []byte) (int, error) {
 	i++
 	i = encodeVarintApi(dAtA, i, uint64(len(m.ApplicationName)))
 	i += copy(dAtA[i:], m.ApplicationName)
+	dAtA[i] = 0x50
+	i++
+	i = encodeVarintApi(dAtA, i, uint64(m.BytesEncodeFormat))
 	return i, nil
 }
 
@@ -844,6 +887,7 @@ func (m *EvalContext) Size() (n int) {
 	n += 1 + l + sovApi(uint64(l))
 	l = len(m.ApplicationName)
 	n += 1 + l + sovApi(uint64(l))
+	n += 1 + sovApi(uint64(m.BytesEncodeFormat))
 	return n
 }
 
@@ -1413,6 +1457,25 @@ func (m *EvalContext) Unmarshal(dAtA []byte) error {
 			}
 			m.ApplicationName = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
+		case 10:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field BytesEncodeFormat", wireType)
+			}
+			m.BytesEncodeFormat = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowApi
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.BytesEncodeFormat |= (BytesEncodeFormat(b) & 0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
 		default:
 			iNdEx = preIndex
 			skippy, err := skipApi(dAtA[iNdEx:])
@@ -2154,66 +2217,70 @@ var (
 func init() { proto.RegisterFile("sql/distsqlrun/api.proto", fileDescriptorApi) }
 
 var fileDescriptorApi = []byte{
-	// 965 bytes of a gzipped FileDescriptorProto
+	// 1039 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x55, 0xcd, 0x6e, 0x23, 0x45,
-	0x10, 0xce, 0xd8, 0x93, 0x4d, 0x5c, 0x8e, 0x43, 0xd2, 0x8a, 0xd0, 0xe0, 0x83, 0x6d, 0x99, 0x05,
-	0x0c, 0x48, 0x76, 0x14, 0xe0, 0x82, 0x90, 0x10, 0x49, 0x16, 0x36, 0x59, 0xb2, 0x0a, 0x33, 0x51,
-	0x84, 0x38, 0x30, 0xea, 0xf4, 0xd4, 0xda, 0xa3, 0x9d, 0xe9, 0x9e, 0xe9, 0x6e, 0x67, 0xcd, 0x03,
-	0x20, 0x71, 0xdc, 0x47, 0xe0, 0xc0, 0x8b, 0x70, 0xcb, 0x91, 0x03, 0x07, 0x4e, 0x01, 0xc2, 0x4b,
-	0x20, 0x4e, 0xa8, 0xe7, 0x27, 0x9e, 0x24, 0x9b, 0x10, 0x6e, 0xd3, 0x55, 0xdf, 0x57, 0x55, 0x5d,
-	0x5f, 0x57, 0x0d, 0x38, 0x2a, 0x8d, 0x46, 0x41, 0xa8, 0xb4, 0x4a, 0x23, 0x39, 0xe5, 0x23, 0x9a,
-	0x84, 0xc3, 0x44, 0x0a, 0x2d, 0x88, 0xc3, 0x04, 0x7b, 0x2e, 0x05, 0x65, 0x93, 0xa1, 0x4a, 0xa3,
-	0xe1, 0x1c, 0xd3, 0xde, 0x18, 0x8b, 0xb1, 0xc8, 0x40, 0x23, 0xf3, 0x95, 0xe3, 0xdb, 0xdd, 0xb1,
-	0x10, 0xe3, 0x08, 0x47, 0xd9, 0xe9, 0x64, 0xfa, 0x6c, 0xa4, 0xc3, 0x18, 0x95, 0xa6, 0x71, 0x52,
-	0x00, 0x48, 0x16, 0x2c, 0x39, 0x19, 0x05, 0x54, 0xd3, 0xc2, 0xf6, 0xc6, 0xb5, 0xf4, 0x15, 0x57,
-	0xf7, 0x9a, 0x2b, 0x91, 0x82, 0xa1, 0x52, 0x42, 0xaa, 0x1c, 0xd0, 0xff, 0xbe, 0x0e, 0x6b, 0x1e,
-	0xea, 0x69, 0xf2, 0x79, 0x24, 0x5e, 0xb8, 0x98, 0x4e, 0x51, 0x69, 0xf2, 0x08, 0x56, 0x03, 0x4c,
-	0x24, 0x32, 0xaa, 0x31, 0xf0, 0xf5, 0x8c, 0x3b, 0x56, 0xcf, 0x1a, 0x34, 0xb7, 0x3a, 0xc3, 0xf9,
-	0x75, 0x8a, 0x3a, 0x86, 0x47, 0x92, 0x72, 0x45, 0x99, 0x0e, 0x05, 0x77, 0x5b, 0x73, 0xd6, 0xd1,
-	0x8c, 0x93, 0x4f, 0xc0, 0x7e, 0x16, 0x89, 0x17, 0x4e, 0x3d, 0x23, 0xf7, 0x87, 0xb7, 0xf5, 0x62,
-	0x68, 0x72, 0x7b, 0x09, 0xb2, 0x6d, 0xfb, 0xec, 0xbc, 0xbb, 0xe0, 0x66, 0x2c, 0xb2, 0x09, 0x4b,
-	0xa7, 0x28, 0x55, 0x28, 0xb8, 0xb3, 0xd8, 0xb3, 0x06, 0xad, 0xed, 0xd7, 0x8d, 0xf3, 0x9f, 0xf3,
-	0xee, 0xea, 0x6e, 0xa8, 0xb4, 0xf7, 0xd5, 0x97, 0xc7, 0xb9, 0xd7, 0x2d, 0x61, 0xe4, 0x00, 0x9a,
-	0x78, 0x4a, 0xa3, 0x1d, 0xc1, 0x35, 0xce, 0xb4, 0xf3, 0x20, 0x4b, 0xfb, 0xd6, 0xed, 0x69, 0x1f,
-	0xcd, 0xc1, 0x45, 0xe6, 0x2a, 0xdf, 0x74, 0x41, 0xcf, 0xb8, 0xcf, 0x84, 0x90, 0x81, 0x1f, 0xa3,
-	0xa6, 0xce, 0x52, 0x16, 0xb1, 0xfb, 0xaa, 0x2e, 0xcc, 0xf8, 0x8e, 0xc1, 0x1d, 0xa0, 0xa6, 0xee,
-	0x8a, 0xae, 0x9c, 0x48, 0x07, 0x96, 0x8e, 0x24, 0x65, 0xf8, 0xe4, 0xd8, 0x59, 0xee, 0x59, 0x83,
-	0xe5, 0x22, 0x55, 0x69, 0xdc, 0xb7, 0x97, 0x6b, 0x6b, 0xf5, 0xfe, 0xdf, 0x35, 0x68, 0x56, 0xea,
-	0x21, 0x1f, 0x02, 0x51, 0x3a, 0xd6, 0x47, 0xa5, 0xfc, 0x4f, 0x29, 0x17, 0x2a, 0x93, 0xa1, 0x5e,
-	0x04, 0x78, 0x85, 0x9f, 0x6c, 0xc1, 0xba, 0x9e, 0xf1, 0x6b, 0xa4, 0x5a, 0x85, 0x74, 0xd3, 0x4d,
-	0x7a, 0xb0, 0x1c, 0x09, 0x46, 0x8d, 0x80, 0x8e, 0xdd, 0xb3, 0x06, 0x8d, 0x02, 0x7a, 0x69, 0x35,
-	0x08, 0xf3, 0xa4, 0x4e, 0xa8, 0xc2, 0x4c, 0x8a, 0x4b, 0x44, 0x69, 0x25, 0x1d, 0x00, 0x85, 0x54,
-	0xb2, 0xc9, 0x21, 0xd5, 0x13, 0xe7, 0x41, 0xaf, 0x3e, 0x68, 0xb8, 0x15, 0x0b, 0x71, 0xc0, 0x9e,
-	0x2a, 0x94, 0x59, 0x03, 0x4b, 0x76, 0x66, 0x21, 0xfb, 0xd0, 0x50, 0x98, 0xfa, 0x4a, 0x53, 0x8d,
-	0x59, 0x7f, 0x9a, 0x5b, 0xef, 0xdc, 0xae, 0x98, 0x67, 0x1e, 0x28, 0x67, 0xe8, 0x19, 0x78, 0x59,
-	0x85, 0xc2, 0x34, 0x3b, 0x93, 0x11, 0xac, 0xd1, 0x24, 0x89, 0xc2, 0xbc, 0x6c, 0x9f, 0xd3, 0x18,
-	0x9d, 0x46, 0x25, 0xe3, 0x6b, 0x15, 0xef, 0x53, 0x1a, 0xe3, 0xbe, 0xbd, 0x5c, 0x5f, 0xb3, 0xfb,
-	0xbf, 0x5a, 0xd0, 0xba, 0x12, 0x98, 0x7c, 0x0a, 0xb6, 0xc2, 0xd4, 0xb4, 0xbb, 0x3e, 0x68, 0x6e,
-	0xbd, 0x7f, 0xcf, 0x7a, 0xcc, 0xc9, 0xcd, 0x88, 0x64, 0x13, 0x36, 0x22, 0xaa, 0xb4, 0x6f, 0xae,
-	0x16, 0x72, 0x26, 0x31, 0x46, 0xae, 0x31, 0xc8, 0xa4, 0x68, 0xb9, 0xc4, 0xf8, 0x3c, 0x4c, 0xf7,
-	0xe6, 0x9e, 0xf6, 0x21, 0xd4, 0x3d, 0x4c, 0xc9, 0x43, 0x78, 0x90, 0x71, 0x82, 0x4c, 0xea, 0xd6,
-	0x76, 0xcb, 0x14, 0x7e, 0x71, 0xde, 0x5d, 0x34, 0xf0, 0x5d, 0x77, 0x51, 0x61, 0xba, 0x17, 0x90,
-	0x37, 0x01, 0x22, 0xaa, 0x51, 0x69, 0xff, 0x94, 0x46, 0x57, 0xf4, 0x6d, 0xe4, 0xf6, 0x63, 0x1a,
-	0xf5, 0xbf, 0x80, 0x55, 0x2f, 0x8c, 0x93, 0x08, 0x5d, 0x54, 0x89, 0xe0, 0x0a, 0xc9, 0x47, 0xb0,
-	0x88, 0x52, 0x0a, 0x59, 0x4c, 0x73, 0xf7, 0x8e, 0xc9, 0x30, 0x30, 0x37, 0x47, 0xf7, 0x7f, 0xa8,
-	0xc1, 0xea, 0x8e, 0xe0, 0x6a, 0x1a, 0xa3, 0xf4, 0xc2, 0x31, 0xa7, 0x11, 0x79, 0x02, 0xad, 0x40,
-	0xd2, 0x90, 0xfb, 0x32, 0xdf, 0x18, 0x45, 0xc4, 0xb7, 0x6f, 0x8f, 0xb8, 0x6b, 0xe0, 0xc5, 0x7e,
-	0x71, 0x57, 0x82, 0xca, 0x89, 0x7c, 0x0d, 0x44, 0x99, 0x0d, 0xe4, 0x9b, 0xb1, 0xbf, 0x8c, 0x58,
-	0xcb, 0x22, 0xbe, 0x77, 0x57, 0xef, 0xaf, 0x6e, 0x2d, 0x77, 0x4d, 0x5d, 0xdf, 0x63, 0x7b, 0xd0,
-	0x98, 0x50, 0x1e, 0xa8, 0x09, 0x7d, 0x8e, 0xc5, 0x16, 0xba, 0x43, 0xcc, 0xf2, 0x8e, 0x8f, 0x4b,
-	0x8a, 0x3b, 0x67, 0x7f, 0x6c, 0x9f, 0xfd, 0xd8, 0xb5, 0xfa, 0xab, 0xb0, 0x52, 0xbd, 0x48, 0xff,
-	0xa7, 0x1a, 0xac, 0xdf, 0xa0, 0x91, 0x0f, 0x80, 0xb0, 0xc2, 0xe8, 0x2b, 0x36, 0xc1, 0x60, 0x1a,
-	0x61, 0x2e, 0x68, 0x39, 0xfc, 0xeb, 0xa5, 0xdf, 0x2b, 0xdd, 0xe4, 0x5b, 0x68, 0xdf, 0x20, 0xf9,
-	0x01, 0xd2, 0x20, 0x0a, 0x39, 0x16, 0xdd, 0x68, 0x0f, 0xf3, 0xdf, 0xc3, 0xb0, 0xfc, 0x3d, 0x0c,
-	0x2f, 0x67, 0x79, 0xdb, 0x7e, 0xf9, 0x7b, 0xd7, 0x72, 0x9d, 0xeb, 0x81, 0x77, 0x8b, 0x08, 0xd5,
-	0x75, 0x5a, 0xbf, 0xdf, 0x3a, 0x7d, 0x0c, 0x1b, 0x71, 0xc8, 0x7d, 0xca, 0x18, 0x26, 0xe6, 0x3f,
-	0x50, 0xd2, 0xed, 0x3b, 0xe9, 0x24, 0x0e, 0xf9, 0x67, 0x05, 0xa5, 0xb0, 0x6d, 0xfd, 0x5c, 0x83,
-	0xa5, 0x02, 0x46, 0x26, 0xd0, 0x74, 0xa7, 0xdc, 0xfb, 0x8e, 0x33, 0xa3, 0x14, 0x19, 0xfc, 0xb7,
-	0x1e, 0xf9, 0x9b, 0x6b, 0xbf, 0x7b, 0x3b, 0xf2, 0x50, 0x8a, 0x60, 0xca, 0x50, 0x1e, 0xa0, 0x52,
-	0x74, 0x8c, 0xfd, 0x85, 0x81, 0xb5, 0x69, 0x11, 0x06, 0x8d, 0xcb, 0x37, 0x42, 0xfe, 0xc7, 0x43,
-	0x6a, 0xdf, 0x51, 0xd3, 0xd5, 0x89, 0xea, 0x2f, 0x90, 0x31, 0x40, 0xf6, 0xf7, 0xd2, 0x12, 0x69,
-	0x4c, 0xee, 0x5f, 0x63, 0xfb, 0xde, 0x17, 0xcf, 0x6f, 0xb3, 0xfd, 0xf0, 0xec, 0xcf, 0xce, 0xc2,
-	0xd9, 0x45, 0xc7, 0xfa, 0xe5, 0xa2, 0x63, 0xfd, 0x76, 0xd1, 0xb1, 0xfe, 0xb8, 0xe8, 0x58, 0x2f,
-	0xff, 0xea, 0x2c, 0x7c, 0x03, 0x73, 0xea, 0xbf, 0x01, 0x00, 0x00, 0xff, 0xff, 0x15, 0xe6, 0x95,
-	0x06, 0x8a, 0x08, 0x00, 0x00,
+	0x10, 0xf6, 0xd8, 0xce, 0x8f, 0xcb, 0x6b, 0xe3, 0x34, 0x2b, 0x34, 0xf8, 0x60, 0x5b, 0x66, 0x01,
+	0xb3, 0x48, 0x76, 0x14, 0x02, 0x07, 0x84, 0x84, 0xe2, 0xc4, 0x4b, 0x92, 0x25, 0xab, 0x30, 0x13,
+	0x45, 0x2b, 0x0e, 0x8c, 0x3a, 0x33, 0x15, 0x7b, 0xb4, 0x33, 0xdd, 0xe3, 0xee, 0x76, 0xd6, 0xfb,
+	0x00, 0x48, 0x1c, 0xf7, 0x11, 0x38, 0xf0, 0x22, 0xdc, 0x72, 0xe4, 0xc0, 0x01, 0x09, 0x29, 0x40,
+	0x78, 0x0b, 0x4e, 0xa8, 0xc7, 0x33, 0xb1, 0xe3, 0xac, 0x4d, 0xb8, 0x4d, 0x57, 0x7d, 0x5f, 0x55,
+	0x75, 0x55, 0xcd, 0xd7, 0x60, 0xca, 0x61, 0xd0, 0xf1, 0x7c, 0xa9, 0xe4, 0x30, 0x10, 0x23, 0xd6,
+	0xa1, 0x91, 0xdf, 0x8e, 0x04, 0x57, 0x9c, 0x98, 0x2e, 0x77, 0x5f, 0x08, 0x4e, 0xdd, 0x41, 0x5b,
+	0x0e, 0x83, 0xf6, 0x14, 0x53, 0x7d, 0xd8, 0xe7, 0x7d, 0x1e, 0x83, 0x3a, 0xfa, 0x6b, 0x82, 0xaf,
+	0xd6, 0xfb, 0x9c, 0xf7, 0x03, 0xec, 0xc4, 0xa7, 0xb3, 0xd1, 0x79, 0x47, 0xf9, 0x21, 0x4a, 0x45,
+	0xc3, 0x28, 0x01, 0x90, 0x38, 0x58, 0x74, 0xd6, 0xf1, 0xa8, 0xa2, 0x89, 0xed, 0xdd, 0xb9, 0xf4,
+	0x33, 0xae, 0xfa, 0x9c, 0x2b, 0x12, 0xdc, 0x45, 0x29, 0xb9, 0x90, 0x13, 0x40, 0xf3, 0xfb, 0x1c,
+	0x54, 0x6c, 0x54, 0xa3, 0xe8, 0x49, 0xc0, 0x5f, 0x5a, 0x38, 0x1c, 0xa1, 0x54, 0xa4, 0x07, 0x65,
+	0x0f, 0x23, 0x81, 0x2e, 0x55, 0xe8, 0x39, 0x6a, 0xcc, 0x4c, 0xa3, 0x61, 0xb4, 0x8a, 0x5b, 0xb5,
+	0xf6, 0xf4, 0x3a, 0x49, 0x1d, 0xed, 0x13, 0x41, 0x99, 0xa4, 0xae, 0xf2, 0x39, 0xb3, 0x4a, 0x53,
+	0xd6, 0xc9, 0x98, 0x91, 0x2f, 0x20, 0x7f, 0x1e, 0xf0, 0x97, 0x66, 0x2e, 0x26, 0x37, 0xdb, 0x8b,
+	0x7a, 0xd1, 0xd6, 0xb9, 0xed, 0x08, 0xdd, 0x6e, 0xfe, 0xf2, 0xaa, 0x9e, 0xb1, 0x62, 0x16, 0xd9,
+	0x84, 0xb5, 0x0b, 0x14, 0xd2, 0xe7, 0xcc, 0x5c, 0x69, 0x18, 0xad, 0x52, 0xf7, 0x1d, 0xed, 0xfc,
+	0xe7, 0xaa, 0x5e, 0xde, 0xf3, 0xa5, 0xb2, 0xbf, 0xf9, 0xfa, 0x74, 0xe2, 0xb5, 0x52, 0x18, 0x39,
+	0x82, 0x22, 0x5e, 0xd0, 0x60, 0x97, 0x33, 0x85, 0x63, 0x65, 0xae, 0xc6, 0x69, 0xdf, 0x5f, 0x9c,
+	0xb6, 0x37, 0x05, 0x27, 0x99, 0x67, 0xf9, 0xba, 0x0b, 0x6a, 0xcc, 0x1c, 0x97, 0x73, 0xe1, 0x39,
+	0x21, 0x2a, 0x6a, 0xae, 0xc5, 0x11, 0xeb, 0x6f, 0xea, 0xc2, 0x98, 0xed, 0x6a, 0xdc, 0x11, 0x2a,
+	0x6a, 0x3d, 0x50, 0x33, 0x27, 0x52, 0x83, 0xb5, 0x13, 0x41, 0x5d, 0x7c, 0x7a, 0x6a, 0xae, 0x37,
+	0x8c, 0xd6, 0x7a, 0x92, 0x2a, 0x35, 0x1e, 0xe6, 0xd7, 0xb3, 0x95, 0x5c, 0xf3, 0xf7, 0x1c, 0x14,
+	0x67, 0xea, 0x21, 0xdb, 0x40, 0xa4, 0x0a, 0xd5, 0x49, 0x3a, 0xfe, 0x67, 0x94, 0x71, 0x19, 0x8f,
+	0x21, 0x97, 0x04, 0x78, 0x83, 0x9f, 0x6c, 0xc1, 0x86, 0x1a, 0xb3, 0x39, 0x52, 0x76, 0x86, 0x74,
+	0xd7, 0x4d, 0x1a, 0xb0, 0x1e, 0x70, 0x97, 0xea, 0x01, 0x9a, 0xf9, 0x86, 0xd1, 0x2a, 0x24, 0xd0,
+	0x1b, 0xab, 0x46, 0xe8, 0x95, 0x3a, 0xa3, 0x12, 0xe3, 0x51, 0xdc, 0x20, 0x52, 0x2b, 0xa9, 0x01,
+	0x48, 0xa4, 0xc2, 0x1d, 0x1c, 0x53, 0x35, 0x30, 0x57, 0x1b, 0xb9, 0x56, 0xc1, 0x9a, 0xb1, 0x10,
+	0x13, 0xf2, 0x23, 0x89, 0x22, 0x6e, 0x60, 0xca, 0x8e, 0x2d, 0xe4, 0x10, 0x0a, 0x12, 0x87, 0x8e,
+	0x54, 0x54, 0x61, 0xdc, 0x9f, 0xe2, 0xd6, 0x87, 0x8b, 0x27, 0x66, 0xeb, 0x05, 0x65, 0x2e, 0xda,
+	0x1a, 0x9e, 0x56, 0x21, 0x71, 0x18, 0x9f, 0x49, 0x07, 0x2a, 0x34, 0x8a, 0x02, 0x7f, 0x52, 0xb6,
+	0xc3, 0x68, 0x88, 0x66, 0x61, 0x26, 0xe3, 0x5b, 0x33, 0xde, 0x67, 0x34, 0x44, 0x42, 0xe1, 0xed,
+	0xb3, 0x57, 0x0a, 0xa5, 0x83, 0xcc, 0xe5, 0x1e, 0x3a, 0xe7, 0x5c, 0x84, 0x54, 0x99, 0xd0, 0x30,
+	0x5a, 0xe5, 0xad, 0x8f, 0x17, 0x97, 0xd1, 0xd5, 0xa4, 0x5e, 0xcc, 0x79, 0x12, 0x53, 0xd2, 0xee,
+	0x9e, 0xcd, 0x3b, 0x0e, 0xf3, 0xeb, 0xb9, 0x4a, 0xbe, 0xf9, 0xab, 0x01, 0xa5, 0x5b, 0xb5, 0x93,
+	0x2f, 0x21, 0x2f, 0x71, 0xa8, 0x27, 0x9a, 0x6b, 0x15, 0x97, 0xe5, 0xba, 0x45, 0xd3, 0x27, 0x2b,
+	0x26, 0x92, 0x4d, 0x78, 0x18, 0x50, 0xa9, 0x1c, 0xdd, 0x3d, 0x9f, 0xb9, 0x02, 0x43, 0x64, 0x0a,
+	0xbd, 0x78, 0xda, 0x25, 0x8b, 0x68, 0x9f, 0x8d, 0xc3, 0x83, 0xa9, 0xa7, 0x7a, 0x0c, 0x39, 0x1b,
+	0x87, 0xe4, 0x11, 0xac, 0xc6, 0x1c, 0x2f, 0xde, 0xa6, 0x52, 0xb7, 0xa4, 0x4b, 0xbf, 0xbe, 0xaa,
+	0xaf, 0x68, 0xf8, 0x9e, 0xb5, 0x22, 0x71, 0x78, 0xe0, 0x91, 0xf7, 0x00, 0x02, 0xaa, 0x50, 0x2a,
+	0xe7, 0x82, 0x06, 0xb7, 0x56, 0xa8, 0x30, 0xb1, 0x9f, 0xd2, 0xa0, 0xf9, 0x15, 0x94, 0x6d, 0x3f,
+	0x8c, 0x02, 0xb4, 0x50, 0x46, 0x9c, 0x49, 0x24, 0x9f, 0xc2, 0x0a, 0x0a, 0xc1, 0x45, 0x22, 0x18,
+	0xf5, 0x25, 0x3f, 0x9f, 0x86, 0x59, 0x13, 0x74, 0xf3, 0x87, 0x2c, 0x94, 0x77, 0x39, 0x93, 0xa3,
+	0x10, 0x85, 0xed, 0xf7, 0x19, 0x0d, 0xc8, 0x53, 0x28, 0x79, 0x82, 0xfa, 0xcc, 0x11, 0x13, 0x51,
+	0x4a, 0x22, 0x7e, 0xb0, 0x38, 0xe2, 0x9e, 0x86, 0x27, 0x12, 0x66, 0x3d, 0xf0, 0x66, 0x4e, 0xe4,
+	0x39, 0x10, 0xa9, 0x45, 0xce, 0xd1, 0xca, 0x72, 0x13, 0x31, 0x1b, 0x47, 0x7c, 0xbc, 0xac, 0xf7,
+	0xb7, 0x85, 0xd1, 0xaa, 0xc8, 0x79, 0xa9, 0x3c, 0x80, 0xc2, 0x80, 0x32, 0x4f, 0x0e, 0xe8, 0x0b,
+	0x4c, 0x84, 0x6e, 0xc9, 0x30, 0xd3, 0x3b, 0xee, 0xa7, 0x14, 0x6b, 0xca, 0xfe, 0x3c, 0x7f, 0xf9,
+	0x63, 0xdd, 0x68, 0x96, 0xe1, 0xc1, 0xec, 0x45, 0x9a, 0x3f, 0x65, 0x61, 0xe3, 0x0e, 0x8d, 0x7c,
+	0x02, 0xc4, 0x4d, 0x8c, 0x8e, 0x74, 0x07, 0xe8, 0x8d, 0x02, 0x9c, 0x0c, 0x34, 0xd5, 0x97, 0x8d,
+	0xd4, 0x6f, 0xa7, 0x6e, 0xf2, 0x1d, 0x54, 0xef, 0x90, 0x1c, 0x0f, 0xa9, 0x17, 0xf8, 0x0c, 0x93,
+	0x6e, 0x54, 0xdb, 0x93, 0x17, 0xa8, 0x9d, 0xbe, 0x40, 0xed, 0x1b, 0xb9, 0xe8, 0xe6, 0x5f, 0xff,
+	0x51, 0x37, 0x2c, 0x73, 0x3e, 0xf0, 0x5e, 0x12, 0x61, 0x56, 0xb1, 0x73, 0xf7, 0x53, 0xec, 0x7d,
+	0x78, 0x18, 0xfa, 0xcc, 0xa1, 0xae, 0x8b, 0x91, 0x7e, 0x6a, 0x52, 0x7a, 0x7e, 0x29, 0x9d, 0x84,
+	0x3e, 0xdb, 0x49, 0x28, 0x89, 0xed, 0xf1, 0x36, 0x6c, 0xdc, 0xf9, 0x2b, 0xc9, 0x1a, 0xe4, 0xf6,
+	0x7b, 0xcf, 0x2b, 0x19, 0x02, 0xb0, 0xda, 0xb3, 0x77, 0x77, 0x8e, 0x7b, 0x15, 0x43, 0x7f, 0x77,
+	0x77, 0xec, 0xde, 0x67, 0xdb, 0x95, 0xec, 0xd6, 0xcf, 0x59, 0x58, 0x4b, 0x82, 0x93, 0x01, 0x14,
+	0xad, 0x11, 0xb3, 0x5f, 0x31, 0x57, 0xcf, 0x97, 0xb4, 0xfe, 0x7b, 0x8a, 0x93, 0x4d, 0xad, 0x7e,
+	0xb4, 0x18, 0x79, 0x2c, 0xb8, 0x37, 0x72, 0x51, 0x1c, 0xa1, 0x94, 0xb4, 0x8f, 0xcd, 0x4c, 0xcb,
+	0xd8, 0x34, 0x88, 0x0b, 0x85, 0x9b, 0xcd, 0x22, 0xff, 0x63, 0xfd, 0xaa, 0x4b, 0x6a, 0xba, 0xfd,
+	0x1f, 0x36, 0x33, 0xa4, 0x0f, 0x10, 0x3f, 0xab, 0x4a, 0x20, 0x0d, 0xc9, 0xfd, 0x6b, 0xac, 0xde,
+	0xfb, 0xe2, 0x93, 0xdb, 0x74, 0x1f, 0x5d, 0xfe, 0x55, 0xcb, 0x5c, 0x5e, 0xd7, 0x8c, 0x5f, 0xae,
+	0x6b, 0xc6, 0x6f, 0xd7, 0x35, 0xe3, 0xcf, 0xeb, 0x9a, 0xf1, 0xfa, 0xef, 0x5a, 0xe6, 0x5b, 0x98,
+	0x52, 0xff, 0x0d, 0x00, 0x00, 0xff, 0xff, 0x41, 0x66, 0x09, 0xcd, 0x23, 0x09, 0x00, 0x00,
 }
